fix: text-align in right to left text obfuscation

--- a/static/style.css
+++ b/static/style.css
@@ -21,8 +21,9 @@
 }
 
 .ritole {
-	unicode-bidi: bidi-override;
 	direction: rtl;
+	unicode-bidi: bidi-override;
+	text-align: left;
 }
 
 * {
